--- a/HalloDoc Project/Views/Guest/Business_Info.cshtml
+++ b/HalloDoc Project/Views/Guest/Business_Info.cshtml
@@ -103,7 +103,7 @@
                 <div class="row ">
                     <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating mt-3">
-                            <input id="business-phone" asp-for="BsPhoneNo" class="PatientInputs form-control" type="tel" name="phone1"></input>
+                            <input id="business-phone" asp-for="BsPhoneNo" class="PatientInputs form-control" type="tel" ></input>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 mt-4">
@@ -166,7 +166,7 @@
                     </div>
                     <div class="col-12 col-sm-6 mt-4 ">
                         <div class="form-floating ">
-                            <input id="patient-phone" asp-for="PtPhoneNo" class="PatientInputs form-control" type="text" name="phone1"></input>
+                            <input id="patient-phone" asp-for="PtPhoneNo" class="PatientInputs form-control" type="text" ></input>
                         </div>
                     </div>
                 </div>
