--- a/HalloDoc Project/Views/Guest/create_patient_request.cshtml
+++ b/HalloDoc Project/Views/Guest/create_patient_request.cshtml
@@ -83,7 +83,7 @@
                     <div class="col-12 col-sm-6 mt-4 ">
 
                         <div class="form-floating ">
-                            <input id="patient-phone" asp-for="PhoneNo" class="PatientInputs form-control" type="tel" name="phone1" autocomplete="off" />
+                            <input id="patient-phone" asp-for="PhoneNo" class="PatientInputs form-control" type="tel" autocomplete="off" />
                             <span class="validation" asp-validation-for="PhoneNo"></span>
                         </div>
                     </div>
