--- a/HalloDoc Project/Views/Home/ViewDocuments.cshtml
+++ b/HalloDoc Project/Views/Home/ViewDocuments.cshtml
@@ -46,7 +46,7 @@
                 <form method="post" enctype="multipart/form-data">
                     <div class="mb-3">
                         <input asp-for="RequestID" hidden />
-                        <input asp-for="File" class="form-control" type="file" id="file_input_id" style="opacity:0;height:0;">
+                        <input asp-for="File" class="form-control" accept=".pdf" type="file" id="file_input_id" style="opacity:0;height:0;">
                         <div class="input-group mb-3">
                             <input type="text" id='text_input_id' class="form-control" placeholder="Select File"
                                    style="caret-color: transparent" autocomplete="off">
