--- a/HalloDoc Project/Views/Admin/ProviderLocation.cshtml
+++ b/HalloDoc Project/Views/Admin/ProviderLocation.cshtml
@@ -1,12 +1,5 @@
 ﻿@{
     Layout = "_AdminDashboardLayout";
+    ViewData["Title"] = "World Map";
 }
-    <h1>ProvidersLocation</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-<script>
-
-    $('.admin-tab').removeClass('active-tab');
-    $('#provider-location-tab').addClass('active-tab');
-
-</script>
+<div id='map' class='map'></div>
