--- a/HalloDoc Project/Views/Admin/ProviderViews/ProviderMenu.cshtml
+++ b/HalloDoc Project/Views/Admin/ProviderViews/ProviderMenu.cshtml
@@ -21,7 +21,7 @@
                             </select>
                         </div>
                         <div>
-                            <a asp-action="CreatePhysicianAccount" asp-controller="Admin" class="btn-info text-light btn">
+                            <a asp-action="CreatePhysician" asp-controller="Admin" class="btn-info text-light btn">
                                 Create Provider Account
                             </a>
                         </div>
