--- a/HalloDoc Project/Views/Admin/ActiveTable.cshtml
+++ b/HalloDoc Project/Views/Admin/ActiveTable.cshtml
@@ -376,7 +376,7 @@
     </div>
 </div>
 <script>
-    var requestid;
+    var requestid; FinalizePDF
     //script to open the finalize modal
     requestid = $("#FinalizePDF").data("requestid");
     // $('#FinalizePDF').click(function () {
