--- a/HalloDoc Project/Views/Admin/AccessViews/AccountAccess.cshtml
+++ b/HalloDoc Project/Views/Admin/AccessViews/AccountAccess.cshtml
@@ -1,6 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model AccountAccessViewModel
 @{
     Layout = "_AdminDashboardLayout";
 }
@@ -35,117 +33,17 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>
-                            RoleName
-                        </td>
-                        <td>
-                            TypeOfAccount
-                        </td>
-                        <td>
-                            <button class="btn btn-outline-info">
-                                Edit
-                            </button>
-                            <button class="btn btn-outline-info">
-                                Delete
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            RoleName
-                        </td>
-                        <td>
-                            TypeOfAccount
-                        </td>
-                        <td>
-                            <button class="btn btn-outline-info">
-                                Edit
-                            </button>
-                            <button class="btn btn-outline-info">
-                                Delete
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            RoleName
-                        </td>
-                        <td>
-                            TypeOfAccount
-                        </td>
-                        <td>
-                            <button class="btn btn-outline-info">
-                                Edit
-                            </button>
-                            <button class="btn btn-outline-info">
-                                Delete
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            RoleName
-                        </td>
-                        <td>
-                            TypeOfAccount
-                        </td>
-                        <td>
-                            <button class="btn btn-outline-info">
-                                Edit
-                            </button>
-                            <button class="btn btn-outline-info">
-                                Delete
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            RoleName
-                        </td>
-                        <td>
-                            TypeOfAccount
-                        </td>
-                        <td>
-                            <button class="btn btn-outline-info">
-                                Edit
-                            </button>
-                            <button class="btn btn-outline-info">
-                                Delete
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            RoleName
-                        </td>
-                        <td>
-                            TypeOfAccount
-                        </td>
-                        <td>
-                            <button class="btn btn-outline-info">
-                                Edit
-                            </button>
-                            <button class="btn btn-outline-info">
-                                Delete
-                            </button>
-                        </td>
-                    <tr>
-                        <td>
-                            RoleName
-                        </td>
-                        <td>
-                            TypeOfAccount
-                        </td>
-                        <td>
-                            <button class="btn btn-outline-info">
-                                Edit
-                            </button>
-                            <button class="btn btn-outline-info">
-                                Delete
-                            </button>
-                        </td>
-                    </tr>
+                    @for (int i = 0; i < Model.Roles.Count; i++)
+                    {
+                        <tr>
+                            <td>@Model.Roles[i].Name</td>
+                            <td>@Model.Roles[i].Accounttype</td>
+                            <td>
+                                <a asp-action="EditRoleAccountAccess" asp-controller="Admin" asp-route-id="@Model.Roles[i].Roleid" class="btn btn-outline-info" type="button">Edit</a>
+                                <a asp-action="DeleteRoleAccountAccess" asp-controller="Admin" asp-route-id="@Model.Roles[i].Roleid" class="btn btn-outline-info" type="button">Delete</a>
+                            </td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </div>
