--- a/HalloDoc Project/Views/Admin/AccessViews/CreateRole.cshtml
+++ b/HalloDoc Project/Views/Admin/AccessViews/CreateRole.cshtml
@@ -30,17 +30,13 @@
                     <label for="floatingSelect" class="ps-4">Account Type</label>
                 </div>
                 <div class="mt-3">
-                    <div>
-                        @for(int i=0;i<Model.AccessMenu.Count;i++)
-                        {
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" data-AccessMenuID="@Model.AccessMenu[i].Menuid">
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    @Model.AccessMenu[i].Name
-                                </label>
-                            </div>
-                        }
+                    <div id="MenuOptions" class="d-flex flex-wrap">
+                       
                     </div>
+                </div>
+                <div class="text-end my-3">
+                    <button type="button" id="CreateRoleButton"  class="btn btn-success">Create</button>
+                    <button type="reset" class="btn btn-danger">Cancel</button>
                 </div>
             </div>
         </div>
@@ -49,17 +45,45 @@
 <script>
     function FilterByAccountType()
     {
-        var UpdatedAccountTypeID = document.getElementById("AccountTypeDropdown").value;
+        var AccountTypeId = document.getElementById("AccountTypeDropdown").value;
         $.ajax({
-            url: '/Admin/CreateRole',
+            url: '/Admin/MenuFilter',
             type: 'POST',
-            data: { RoleModel: @Model, AccountTypeId: },
+            data: { AccountType: AccountTypeId },
             success: function (data) {
-                console.log("success");
+                $('#MenuOptions').empty();
+                $.each(data, function (index, item) {
+                    $('#MenuOptions').append('<div class="pe-4 pt-2 d-flex "><input type="checkbox" class="border check form-check-input pe-0" style="width:20px; height:20px" value="' + item.menuid + '"><label class="ps-2 form-check-label" for="flexCheckDefault">' + item.name + '</label></div>');
+                });
             },
             error: function (error) {
                 alert('ExportError');
             }
         });
     }
+    </script>
+    <script>
+        $('#CreateRoleButton').click(function () {
+            alert("func hit");
+            let selectedPages = [];
+            let checkboxes = document.querySelectorAll(".check");
+            checkboxes.forEach(function (checkbox) {
+                if (checkbox.checked) {
+                    selectedPages.push(checkbox.value);
+                }
+            });
+            $.ajax({
+                url: '/Admin/CreateNewRole',
+                type: 'POST',
+            data: { Rolename: $("#RoleName").val(), AccountType: $('#AccountTypeDropdown').val(), checkboxes: selectedPages },
+                success: function (data) {
+                    if (data) { 
+                    window.location.reload();
+                    }
+                },
+                error: function (error) {
+                    alert('ExportError');
+                }
+            });
+        });
 </script>
