--- a/HalloDoc Project/Views/Admin/AdminDashboard.cshtml
+++ b/HalloDoc Project/Views/Admin/AdminDashboard.cshtml
@@ -226,8 +226,8 @@
         </div>
     </div>
     <div class="py-3 mt-2  shadow-lg rounded">
-        <div class=" d-flex ps-3 pe-3 align-items-center justify-content-between">
-            <div class="d-flex">
+        <div class=" d-xl-flex ps-3 pe-3 align-items-center justify-content-xl-between ">
+            <div class="d-flex justify-content-center justify-content-xl-start">
                 <div class="d-flex normal-input rounded align-items-center ps-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 50 50">
                         <path d="M 21 3 C 11.654545 3 4 10.654545 4 20 C 4 29.345455 11.654545 37 21 37 C 24.701287 37 28.127393 35.786719 30.927734 33.755859 L 44.085938 46.914062 L 46.914062 44.085938 L 33.875 31.046875 C 36.43682 28.068316 38 24.210207 38 20 C 38 10.654545 30.345455 3 21 3 z M 21 5 C 29.254545 5 36 11.745455 36 20 C 36 28.254545 29.254545 35 21 35 C 12.745455 35 6 28.254545 6 20 C 6 11.745455 12.745455 5 21 5 z">
@@ -236,7 +236,7 @@
                     <input id="searchBtn" type="text" class="form-control" placeholder="Search Patients">
                 </div>
 
-                <div class="d-flex normal-input rounded align-items-center ms-2 ps-2">
+                <div class="d-flex  normal-input rounded align-items-center ms-2 ps-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 50 50">
                         <path d="M 21 3 C 11.654545 3 4 10.654545 4 20 C 4 29.345455 11.654545 37 21 37 C 24.701287 37 28.127393 35.786719 30.927734 33.755859 L 44.085938 46.914062 L 46.914062 44.085938 L 33.875 31.046875 C 36.43682 28.068316 38 24.210207 38 20 C 38 10.654545 30.345455 3 21 3 z M 21 5 C 29.254545 5 36 11.745455 36 20 C 36 28.254545 29.254545 35 21 35 C 12.745455 35 6 28.254545 6 20 C 6 11.745455 12.745455 5 21 5 z">
                         </path>
@@ -250,13 +250,14 @@
                     </select>
                 </div>
             </div>
-            <div class="d-md-block d-none">
+
+
+            <div class="d-flex justify-content-center justify-content-xl-end m-xl-0 mt-3">
                 <div class="d-flex align-items-center">
 
                     <button id="NoFilter" class="active-filter filter-options d-flex align-items-center  px-2 py-1 rounded">
                         <span>All</span>
                     </button>
-
                     <button id="PatientFilter" class="filter-options px-2 py-1 rounded d-flex align-items-center ms-2">
                         <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                             <circle fill="#5fbc61" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
@@ -310,21 +311,17 @@
 
                     <div class="form-floating my-2">
                         <select class="form-select" id="selectregion" aria-label="Floating label select example">
-                            <option selected>Select</option>
+                            <option selected disabled>Select</option>
                             @for (int i = 0; i < Model.regions.Count; i++)
                             {
                                 <option value="@Model.regions[i].Regionid">@Model.regions[i].Name</option>
                             }
                         </select>
-                        <label for="floatingSelect ">Narrow Search By Region</label>
+                        <label for="floatingSelect">Narrow Search By Region</label>
                     </div>
 
                     <select class="form-select" id="selectphysician" name="AssignPhysician" aria-label="Default select example">
                         <option selected>Select Physician</option>
-                        @for (int i = 0; i < Model.physician.Count; i++)
-                        {
-                            <option value="@Model.physician[i].Physicianid">@Model.physician[i].Firstname @Model.physician[i].Lastname</option>
-                        }
                     </select>
 
                     <div class="form-floating my-2">
@@ -582,7 +579,29 @@
 <script src="~/lib/jquery/dist/jquery.min.js">
 </script>
 <script type="text/javascript">
-    
+
+
+    $('#selectregion').change(function () {
+        var selectedRegion = $("#selectregion").val();
+        $.ajax({
+            url: '/Admin/FilterPhysicianByRegion',
+            type: 'POST',
+            data: { regionid: selectedRegion },
+
+            success: function (response) {
+                console.log(response);
+                $('#selectphysician').empty();
+
+                $.each(response, function (index, item) {
+                    $('#selectphysician').append($('<option>').text(item.firstname).attr('value', item.Physicianid);
+                });
+            },
+            error: function (xhr, status, error) {
+                console.error('Error submitting form:', error);
+            }
+        });
+    })
+
     $('#AssignCaseForm').submit(function (event) {
         event.preventDefault();
 
