--- a/HalloDoc Project/Views/Admin/ActiveTable.cshtml
+++ b/HalloDoc Project/Views/Admin/ActiveTable.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AdminDashboardViewModel
 <div class=" table-responsive rounded mt-3">
-    <table class="table d-md-block d-none shadow-lg">
+    <table class="table admin-dashboard-tables d-md-block d-none shadow-lg">
         <colgroup>
             <col span="1" style="width: 15%;">
             <col span="1" style="width: 8%;">
