--- a/HalloDoc Project/Views/Admin/NewTable.cshtml
+++ b/HalloDoc Project/Views/Admin/NewTable.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AdminDashboardViewModel
 <div class="mt-3 table-responsive rounded">
-    <table class="table  shadow-lg d-md-block d-none">
+    <table class="table admin-dashboard-tables shadow-lg d-md-block d-none">
         <colgroup>
             <col span="1" style="width: 17%;">
             <col span="1" style="width: 8%;">
