--- a/HalloDoc Project/Views/Admin/PendingTable.cshtml
+++ b/HalloDoc Project/Views/Admin/PendingTable.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AdminDashboardViewModel
 <div class="table-responsive rounded mt-3">
-    <table class="table shadow-lg d-md-block d-none">
+    <table class="table admin-dashboard-tables shadow-lg d-md-block d-none">
         <colgroup>
             <col span="1" style="width: 15%;">
             <col span="1" style="width: 8%;">
