--- a/HalloDoc Project/Views/Admin/ToCloseTable.cshtml
+++ b/HalloDoc Project/Views/Admin/ToCloseTable.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AdminDashboardViewModel
 <div class=" rounded mt-3">
-    <table class="table d-md-block d-none">
+    <table class="table admin-dashboard-tables d-md-block d-none">
         <colgroup>
             <col span="1" style="width: 17%;">
             <col span="1" style="width: 8%;">
