--- a/HalloDoc Project/Views/Admin/ProviderLocation.cshtml
+++ b/HalloDoc Project/Views/Admin/ProviderLocation.cshtml
@@ -10,7 +10,14 @@
 
 
 <div>
-    <div id="map" style="height:756px"></div>
+    <div class="row justify-content-center ">
+        <div class="col-10">
+            <h4 class="my-3">Provider Location</h4>
+            <div class="shadow-lg p-4 my-3">
+                <div id="map" style="height:700px"></div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
@@ -29,18 +36,18 @@
         container: "map",
         key: "JAeaeKBQDvdePcIjhUji0lGw59M11Laa",
         center: [@Model.locationList.First().Longitude, @Model.locationList.First().Latitude],
-        zoom: 15,
+        zoom: 0,
     });
 
     @foreach (var row in Model.locationList)
     {
         @:console.log('hi');
         @:var cmarker = new tt.Marker().setLngLat([@row.Longitude, @row.Latitude]).addTo(map);
-        @:var cpopup = new tt.Popup({ offset: popupOffsets }).setHTML("<b>@row.PhysicianName</b>");
+        @:var cpopup = new tt.Popup({ offset: popupOffsets }).setHTML("@row.PhysicianName");
         @:cmarker.setPopup(cpopup).togglePopup();
     }
 </script>
-@* 
+@*
 <script>
 
     var map = tt.map({
